# myrtchallenge

./: .gitignore  CMakeLists.txt  LICENSE  README.md
examples/: CMakeLists.txt  analog.cpp  casting.cpp  cylinders.cpp  glass_sphere.cpp  patterns.cpp  planes.cpp  projectile.cpp  puppets.cpp  reflect_refract.cpp  scene.cpp  shading.cpp  table.cpp  ticker.cpp
include/myrtchallenge/: camera.hpp  canvas.hpp  colors.hpp  intersections.hpp  lights.hpp  materials.hpp  matrices.hpp  patterns.hpp  rays.hpp  shapes.hpp  spheres.hpp  transformations.hpp  tuples.hpp  world.hpp
src/: CMakeLists.txt  camera.cpp  canvas.cpp  colors.cpp  intersections.cpp  lights.cpp  materials.cpp  matrices.cpp  patterns.cpp  primitives.hpp  rays.cpp  shapes.cpp  spheres.cpp  transformations.cpp  tuples.cpp  world.cpp
tests/: CMakeLists.txt  bounds_feature.cpp  camera_feature.cpp  canvas_feature.cpp  catch_helpers.hpp  cones_feature.cpp  cubes_feature.cpp  cylinders_feature.cpp  groups_feature.cpp  intersections_feature.cpp  lights_feature.cpp  materials_feature.cpp  matrices_feature.cpp  patterns_feature.cpp  planes_feature.cpp  rays_feature.cpp  shapes_feature.cpp  spheres_feature.cpp  test_pattern.hpp  test_shape.hpp  transformations_feature.cpp  tuples_feature.cpp  world_feature.cpp
